[package]
name = "web"
version = "0.2.0"
authors = ["Tony Thorsen <tony@tonythorsen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.4.2"
validator = "0.10.0"
validator_derive = "0.10.0"